--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "sortablejs": "^1.10.2",
     "underscore": "^1.10.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
