--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sduoj-manage",
+  "name": "SDUOJ",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,31 +8,36 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "element-ui": "^2.13.1",
-    "sortablejs": "^1.10.2",
-    "underscore": "^1.10.2",
+    "axios": "^0.20.0",
+    "core-js": "^3.6.5",
+    "markdown-it-vue": "^1.1.3",
+    "timeago.js": "^4.0.2",
+    "view-design": "^4.3.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-clipboard2": "^0.3.1",
+    "vue-codemirror-lite": "^1.0.4",
+    "vue-highlightjs": "^1.3.3",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "fibers": "^4.0.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
+    "iview-loader": "^1.3.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
