--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "markdown-it-vue": "^1.1.3",
+    "markdown-it-vue": "^1.1.4",
     "timeago.js": "^4.0.2",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror-lite": "^1.0.4",
     "vue-highlightjs": "^1.3.3",
+    "vue-meditor": "^2.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
