--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "markdown-it-vue": "^1.1.4",
+    "moment": "^2.29.1",
     "timeago.js": "^4.0.2",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
