--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "core-js": "^3.6.5",
     "markdown-it-vue": "^1.1.4",
     "moment": "^2.29.1",
+    "spark-md5": "^3.0.1",
     "timeago.js": "^4.0.2",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
+    "vue-codemirror": "^4.0.6",
     "vue-codemirror-lite": "^1.0.4",
     "vue-highlightjs": "^1.3.3",
     "vue-meditor": "^2.1.1",
