--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "markdown-it-vue": "^1.1.4",
+    "mavon-editor": "^2.9.0",
     "moment": "^2.29.1",
     "spark-md5": "^3.0.1",
     "timeago.js": "^4.0.2",
