--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "markdown-it-vue": "^1.1.4",
+    "mavon-editor": "^2.9.0",
     "moment": "^2.29.1",
     "spark-md5": "^3.0.1",
     "timeago.js": "^4.0.2",
@@ -19,7 +19,6 @@
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror": "^4.0.6",
     "vue-codemirror-lite": "^1.0.4",
-    "vue-highlightjs": "^1.3.3",
     "vue-meditor": "^2.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
