--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-codemirror-lite": "^1.0.4",
     "vue-meditor": "^2.1.1",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
