--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "mavon-editor": "^2.9.0",
     "moment": "^2.29.1",
     "spark-md5": "^3.0.1",
